Fix Files.write to work with java 8