@@ -76,7 +76,7 @@ public class FoodService {
                         connection.disconnect();
                     }
                     String content = stringBuilder.toString();
-                    Files.writeString(FOOD_DATA_CACHE_FILE.toPath(), content, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
+                    Files.write(FOOD_DATA_CACHE_FILE.toPath(), Collections.singleton(content), StandardCharsets.UTF_8, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
                     JSONObject object = new JSONObject(content);
                     object.keySet().forEach(key -> cachedItems.put(key, new ParsedFoodInfo()));
                     System.out.println("Updated food data file: " + cachedItems.size() + " entries");
